[project]
name = "openpipe-art"
version = "0.5.17"
description = "The OpenPipe Agent Reinforcement Training (ART) library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.14.0",
    "typer>=0.15.2",
    "litellm>=1.71.1,<=1.82.0",
    "weave>=0.52.24",
    "polars>=1.26.0",
    "tblib>=3.0.0",
    "nest-asyncio>=1.6.0",
    "setproctitle>=1.3.6",
]

[project.optional-dependencies]
plotting = ["matplotlib>=3.10.1", "seaborn>=0.13.2"]

backend = [
    "peft>=0.14.0",
    "hf-xet>=1.1.0",
    "bitsandbytes>=0.45.2",
    "unsloth==2026.3.3",
    "unsloth-zoo==2026.3.1",
    "torch==2.10.0",
    "torchao==0.15.0",
    "accelerate==1.7.0",
    "awscli>=1.38.1",
    "setuptools>=78.1.0",
    "wandb==0.25.0",
    "transformers==5.2.0",
    "duckdb>=1.0.0",
    "pyarrow>=15.0.0",
    "trl==0.20.0",
    "nbclient>=0.10.1",
    "pytest>=8.4.1",
    "nbmake>=1.5.5",
    "gql<4",
    "nvidia-cudnn-frontend<1.21 ; sys_platform == 'linux'",
    "nvidia-resiliency-ext<0.5 ; sys_platform == 'linux'",
    "vllm @ https://github.com/vivekkalyan/vllm/releases/download/v0.17.0-art1/vllm-0.17.0%2Bart1-cp38-abi3-manylinux_2_31_x86_64.whl ; sys_platform == 'linux'",
]
megatron = [
    "numpy<2",
    "torch==2.10.0",
    "apex @ git+https://github.com/NVIDIA/apex.git@25.09",
    "transformer-engine==2.11.0",
    "transformer-engine-cu12==2.11.0",
    "transformer-engine-torch @ git+https://github.com/NVIDIA/TransformerEngine.git@v2.11#subdirectory=transformer_engine/pytorch",
    "megatron-core==0.16.0rc0",
    "pybind11>=2.13.6",
    "megatron-bridge @ git+https://github.com/NVIDIA-NeMo/Megatron-Bridge.git@e049cc00c24d03e2ae45d2608c7a44e2d2364e3d",
    "deep_ep @ git+https://github.com/deepseek-ai/DeepEP.git@v1.2.1 ; sys_platform == 'linux'",
    "causal-conv1d @ https://github.com/Dao-AILab/causal-conv1d/releases/download/v1.6.1.post4/causal_conv1d-1.6.1%2Bcu12torch2.10cxx11abiTRUE-cp311-cp311-linux_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64' and python_full_version < '3.12'",
    "mamba-ssm @ https://github.com/state-spaces/mamba/releases/download/v2.3.1/mamba_ssm-2.3.1%2Bcu12torch2.10cxx11abiTRUE-cp311-cp311-linux_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64' and python_full_version < '3.12'",
    "nvidia-ml-py==13.580.82",
    "nvidia-resiliency-ext<0.5 ; sys_platform == 'linux'",
    "ml-dtypes>=0.5.0 ; python_full_version < '3.13'",
]

langgraph = [
    "langchain-core>=0.3.51",
    "langgraph>=0.6.2",
    "langchain-openai>=0.3.27",
]
tinker = [
    "fastapi>=0.128.0",
    "huggingface_hub",
    "numpy<2",
    "pillow",
    "pyarrow>=15.0.0",
    "pydantic>=2.12.5",
    "tinker>=0.8.1",
    "torch==2.10.0",
    "transformers==5.2.0",
    "uvicorn>=0.35.0",
    "datrie>=0.8.3",
]

[project.scripts]
art = "art.cli:app"

[project.entry-points."vllm.general_plugins"]
art = "art.vllm.patches:patch_transformers_v5_compat"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/art", "src/mp_actors"]

[tool.hatch.build.targets.wheel.force-include]
".agents/skills" = "art/skills"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/dev",
    "/wandb",
    "/.art",
    "/.ruff_cache",
    "/.venv",
    "/dist",
    "/.git",
    "/.github",
    "/examples/*/data",
    "/examples/*/wandb",
    "**/__pycache__",
    "**/*.pyc",
]

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
case-sensitive = false
known-first-party = ["art"]
known-third-party = ["tinker", "wandb"]
force-sort-within-sections = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live_api_cost: opt-in live API cost validation against provider endpoints",
]

[tool.uv]
required-version = ">=0.11.7"
override-dependencies = [
    "flashinfer-python==0.6.1",
    "numpy<2",
    "nvidia-resiliency-ext<0.5",
    "quack-kernels==0.2.5",
    "transformer-engine==2.11.0",
]
exclude-dependencies = ["pynvml", "emerging-optimizers"]
no-build-isolation-package = ["apex", "transformer-engine", "transformer-engine-cu12", "transformer-engine-torch", "megatron-core", "megatron-bridge", "deep-ep", "nv-grouped-gemm"]

[tool.uv.extra-build-dependencies]
apex = ["torch>=2.8.0"]
deep-ep = ["torch>=2.8.0"]
megatron-core = ["pybind11"]
nv-grouped-gemm = ["torch>=2.8.0"]
transformer-engine-torch = ["torch>=2.8.0"]

[tool.uv.extra-build-variables]
apex = { APEX_CPP_EXT = "1", APEX_CUDA_EXT = "1", APEX_FAST_LAYER_NORM = "1", APEX_PARALLEL_BUILD = "16", NVCC_APPEND_FLAGS = "--threads 4" }
transformer-engine-torch = { NVTE_NO_LOCAL_VERSION = "1" }

[[tool.uv.dependency-metadata]]
name = "apex"
version = "0.1"
requires-dist = ["packaging"]

[[tool.uv.dependency-metadata]]
name = "deep-ep"
version = "1.2.1+9af0e0d"
requires-dist = []

[[tool.uv.dependency-metadata]]
name = "transformer-engine-torch"
version = "2.11.0"
requires-dist = [
    "einops",
    "onnx",
    "onnxscript",
    "packaging",
    "pydantic",
    "torch",
    "transformer-engine-cu12",
]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
# Ignore unused-ignore-comment warnings because they vary depending on whether
# optional deps are installed. The ty:ignore comments are needed in CI (with all deps)
# but become unused locally (without all deps).
unused-ignore-comment = "ignore"

[tool.ty.analysis]
# Allow unresolved imports for optional dependencies that may not be installed locally.
# In CI, we install all optional deps so these will be resolved and type-checked.
allowed-unresolved-imports = [
    # tinker deps
    "tinker.**",
    "datrie.**",
    # backend deps
    "accelerate.**",
    "awscli.**",
    "bitsandbytes.**",
    "cloudpickle.**",
    "datasets.**",
    "duckdb.**",
    "fastapi.**",
    "gql.**",
    "hf_xet.**",
    "nbclient.**",
    "nbmake.**",
    "peft.**",
    "pyarrow.**",
    "torch.**",
    "torchao.**",
    "transformers.**",
    "trl.**",
    "unsloth.**",
    "unsloth_zoo.**",
    "uvicorn.**",
    "vllm.**",
    "wandb.**",
    # langgraph deps
    "langchain_core.**",
    "langchain_openai.**",
    "langgraph.**",
    # plotting deps
    "matplotlib.**",
    "seaborn.**",
    # megatron deps
    "megatron.**",
    "quack.**",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "hatch>=1.14.1",
    "ruff>=0.12.1",
    "pytest>=8.4.1",
    "nbval>=0.11.0",
    "pytest-xdist>=3.8.0",
    "ty==0.0.14",
    "pytest-asyncio>=1.1.0",
    "duckdb>=1.0.0",
    "pyarrow>=15.0.0",
    "prek>=0.2.29",
    "uv>=0.11.7",
    "skypilot[cudo,do,fluidstack,gcp,kubernetes,lambda,paperspace,runpod]==0.11.1",
]

[tool.uv.sources]
panza = { git = "https://github.com/corbt/panza.git" }
